--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click
 comm
 contourpy
 cycler
+datetime
 debugpy
 decorator
 dotenv
@@ -24,7 +25,7 @@ kiwisolver
 matplotlib
 matplotlib-inline
 nest-asyncio
-numpy
+numpy==1.24.3
 opencv-python
 packaging
 pandas
@@ -50,6 +51,7 @@ six
 sniffio
 stack-data
 starlette
+tensorflow==2.13.0
 tornado
 traitlets
 typing_extensions
