--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y build-essential libgl1-mesa-glx
 
 # Copy requirements and install
 COPY requirements.txt .
-RUN python -m venv venv && \
+RUN python3.12 -m venv venv && \
     . venv/bin/activate && \
     pip install --upgrade pip && \
     pip install -r requirements.txt
