--- a/deployment/Dockerfile.backend
+++ b/deployment/Dockerfile.backend
@@ -3,16 +3,9 @@ FROM python:3.10-slim
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y build-essential libgl1-mesa-glx
+RUN apt-get update && apt-get install -y libgl1-mesa-glx
 
-# Copy requirements and install
-COPY requirements.txt .
-RUN python3.12 -m venv venv && \
-    . venv/bin/activate && \
-    pip install --upgrade pip && \
-    pip install -r requirements.txt
-
-# Copy the full app code
+# Copy everything INCLUDING venv
 COPY . .
 
 EXPOSE 8000
